# cps-gazebo-sim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  arm1.gv  arm1arm1_arm_arm1_base_link_inertiaarm1_tool0_5000_1.000000_1.000000.ikcache  arm1arm1_arm_arm1_base_link_inertiaarm1_wrist_3_link_5000_1.000000_1.000000.ikcache  arm1ur3e_arm_arm1_base_linkarm1_tool0_5000_1.000000_1.000000.ikcache  arm1ur3e_arm_arm1_base_linkarm1_wrist_3_link_5000_1.000000_1.000000.ikcache  pytest.ini  realistic_collision_test.py  requirements.txt  setup.sh
.repos/: interbotix.repos  robotiq_grippers.repos  universal_robots.repos
arm1_moveit_config/: CMakeLists.txt  package.xml
arm1_moveit_config/launch/: setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
arm1b_moveit_config/launch/: move_group.launch.py  static_virtual_joint_tfs.launch.py
arm1c_moveit_config/config/: arm1.srdf
arm1c_moveit_config/launch/: static_virtual_joint_tfs.launch.py
arm1d_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py
arm1e_moveit_config/config/: arm1.srdf  moveit_controllers.yaml
arm1e_moveit_config/launch/: rsp.launch.py  setup_assistant.launch.py
arm1f_moveit_config/: .setup_assistant
arm1f_moveit_config/config/: moveit_controllers.yaml
arm1g_transmission_moveit_config/config/: arm2_controllers.yaml  moveit_controllers.yaml  multi_arm_controllers.yaml  mutli_arm.ros2_control.xacro  mutli_arm.srdf
arm1g_transmission_moveit_config/launch/: demo.launch.py  spawn_controllers.launch.py
broken_tests/: quick_planning_test.py  simple_dual_arm_demo.py  test_planning.py
collision_tests/: __init__.py  simple_collisions_test.py
collision_tests/utils/: gazebo_launcher.py  headless_demo.launch.py  robot_collision_helper.py
configs/: diff_robots.json  rabit-config-2-no-robots.json  rabit-config-2-translated.json  rabit-config-real.json  rabit-config.json  test_static_objects.json
configs/schemas/: cps-gazebo-schema.json  general-schema-2.json  general-schema-diff.json  general-schema-updated.json  general-schema.json  simulator-schema.json
directed-studies/: deliverables.md
directed-studies/ai/: alabOS-summary.md  arm-control-api-design.md  build-ros-package-commands.md  rabit-schema-changes.md  rabit-static-objects.md  repo-state-breakdown.md  sdl-overview.md  static-objects-reference.md  test-plan.md
directed-studies/docs/: alabos.md  ivoryos.md  ivoryos2.md  review-of-SDLs.md
directed-studies/meetings/: 002-may-15-2026.md  003-may-22-2026-1.md  009-june-5-2026.md  010-june-8-2026.md  011-june-10.md  012-june-10-2.md  013-june-11.md  014-june-12.md  015-june-16.md  april-22-2026.md  may-15-2026.md  may-22-2026-2.md  may-22-2026.md  may-27-2026.md  may-28-2026.md  may-29-2026-1.md  may-29-2026-2.md  may-29-2026.md
directed-studies/status-reports/: 001-may-24-2026.md  002-may-31-2026.md  003-june-7-2026.md  004-june-14-2026.md  may-29-2026.md  may-31-2026.md
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.in  requirements.txt
docs/_static/: custom.css
docs/dev-guides/: customized_vendor_packages.md  extras.md  index.rst  (+1 more)
multi_arm_lab_sim_gazebo/: README.md  package.xml
ros2_ws/src/multi_arm_lab_sim_bringup/: package.xml
ros2_ws/src/multi_arm_lab_sim_bringup/launch/: environment.launch.py  multiple_ur.launch.py  xsarm.launch.py
ros2_ws/src/multi_arm_lab_sim_bringup/test/: test_environment_launch.py  test_xsarm_launch.py
scripts/: add-model  create-ros-pkg  create_worlds.py  integration-tests  multiple-robots-moveit  multiple-robots-with-controllers-no-moveit  preview-world  regenerate-pkg  resize-model  serve-docs  setup.sh  translate-config
src/multi_arm_control/: package.xml  setup.cfg  setup.py
src/multi_arm_control/multi_arm_control/: __init__.py  conventions.py  fleet.py
src/multi_arm_lab_sim_bringup/: CMakeLists.txt  package.xml
src/multi_arm_lab_sim_bringup/config/: arms.json  initial_positions.yaml  tf_bridge.rviz  ur3_moveit2_multi.rviz  ur_controllers.yaml
src/multi_arm_lab_sim_bringup/launch/: diff_drive.launch.py  environment.launch.py  load_ur3e.launch.py  multiple.launch.py  multiple2.launch.py  multiple_ur.launch.py  multiple_ur_with_gripper.launch.py  test.launch.py  ur3e.launch.py  ur3e_gazebo.launch.py  xarm.launch.py  xsarm.launch.py
src/multi_arm_lab_sim_bringup/test/: test_environment_launch.py  test_multiple_ur_launch.py  test_xsarm_launch.py
src/test_single/: CMakeLists.txt  package.xml
src/test_single/config/: controllers.yaml  ompl_planning.yaml  pipeline.yaml  test_single.rviz  test_single.srdf
src/test_single/launch/: demo.launch.py
src/test_single/urdf/: test_single.urdf  test_single.urdf.xacro  test_single_wrapper.urdf.xacro
src/test_single_29/: CMakeLists.txt  package.xml
src/test_single_29/config/: initial_positions.yaml  kinematics.yaml  robots.json  test_single_29.rviz  test_single_29.srdf
src/test_single_29/launch/: demo.launch.py
src/test_single_29/urdf/: robot_description_template.xacro  test_single_29.urdf.xacro  test_single_29_wrapper.urdf.xacro
tests/: interarm_collision_test.py  simple_collisions_test.py
tests_b/: realistic_collision_test.py  simple_collisions_test.py
tutorial/: building_robot.sdf
(+420 files in other folders)
