<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_arm_lab_sim_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the multi_arm_lab_sim project</description>
  <maintainer email="irisxu02@gmail.com">Iris Xu</maintainer>
  <license>Apache 2.0</license>
  <author>Iris Xu</author>

  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>

  <depend>multi_arm_lab_sim_description</depend>
  <depend>multi_arm_lab_sim_gazebo</depend>
  <depend>multi_ur_description</depend>
  <depend>interbotix_xsarm_descriptions</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

